--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - MyResume Bootstrap Template</title>
+  <title>Tim Nightingale - Resume</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -68,7 +68,7 @@
           <div class="col-lg-9">
             <h2>Tim Nightingale</h2>
             <p>I'm <span class="typed"
-                data-typed-items="an Architect, an Innovator, a Developer, a Data and Analytics Consultant, a Quick Learner, Inquisitive"></span><span
+                data-typed-items="an Architect , an Innovator , a Developer , a Data and Analytics Consultant , a Quick Learner , Inquisitive "></span><span
                 class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
               <!--              <a href="#"><i class="bi bi-twitter-x"></i></a>-->
