--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <!-- <link href="assets/img/favicon.png" rel="icon"> -->
+  <!-- <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
+  <link href="assets/img/TNCropped.png" rel="icon">
+  <link href="assets/img/TNCropped.png" rel="apple-touch-icon">
+
+
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -227,26 +231,6 @@
         <div class="row">
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Sumary</h3>
-
-            <div class="resume-item pb-0">
-              <h4>Tim Nightingale</h4>
-              <p><em>Over 24 years delivering the successful implementation of innovative and persuasive solutions, for
-                  organizations across various sectors and regions</em></p>
-              <ul>
-                <li>Stafford, United Kingdom</li>
-                <li>1timnightingale@gmail.com</li>
-              </ul>
-            </div><!-- Edn Resume Item -->
-
-            <h3 class="resume-title">Education</h3>
-            <div class="resume-item">
-              <h4>High school &amp; college education</h4>
-              <h5>1981 - 1988</h5>
-              <p><em>Wolverhampton, United Kingdom</em></p>
-              <p></p>
-            </div><!-- Edn Resume Item -->
-
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Analytics Architect</h4>
@@ -271,10 +255,6 @@
               </ul>
             </div><!-- Edn Resume Item -->
 
-          </div>
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <h3 class="resume-title">Professional Experience (continued)</h3>
             <div class="resume-item">
               <h4>BI Principal Consultant</h4>
               <h5>Sep 2015 – Oct 2022</h5>
@@ -304,6 +284,28 @@
               </ul>
             </div><!-- Edn Resume Item -->
 
+          </div>
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+            <h3 class="resume-title">Sumary</h3>
+
+            <div class="resume-item pb-0">
+              <h4>Tim Nightingale</h4>
+              <p><em>Over 24 years delivering the successful implementation of innovative and persuasive solutions, for
+                  organizations across various sectors and regions</em></p>
+              <ul>
+                <li>Stafford, United Kingdom</li>
+                <li>1timnightingale@gmail.com</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
+
+            <h3 class="resume-title">Education</h3>
+            <div class="resume-item">
+              <h4>High school &amp; college education</h4>
+              <h5>1981 - 1988</h5>
+              <p><em>Wolverhampton, United Kingdom</em></p>
+              <p></p>
+            </div><!-- Edn Resume Item -->
           </div>
 
         </div>
