--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section light-background">
 
-      <img src="assets/img/hero-bg.jpg" alt="">
+      <!-- <img src="assets/img/hero-bg.jpg" alt=""> -->
+      <img src="assets/img/tim2.png" alt="">
 
       <div class="container" data-aos="zoom-out">
         <div class="row justify-content-center">
@@ -78,7 +79,7 @@
               <!--              <a href="#"><i class="bi bi-twitter-x"></i></a>-->
               <!--              <a href="#"><i class="bi bi-facebook"></i></a>-->
               <!--              <a href="#"><i class="bi bi-instagram"></i></a>-->
-              <a href="https://www.linkined.com/in/1timnightingale"><i class="bi bi-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/1timnightingale"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
         </div>
@@ -101,7 +102,8 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <!-- <img src="assets/img/profile-img.jpg" class="img-fluid" alt=""> -->
+            <img src="assets/img/tim3.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>Analytics Architect &amp; Innovator.</h2>
@@ -590,9 +592,9 @@
                 </svg>
                 <i class="bi bi-globe"></i>
               </div>
-              <a href="#" class="stretched-link">
-                <h3>SAP/Business Objects - Global Migration Team</h3>
-              </a>
+              <!-- <a href="#" class="stretched-link"> -->
+              <h3>SAP/Business Objects - Global Migration Team</h3>
+              <!-- </a> -->
               <p>Worked in all elements of migration activities, including product development, training, and
                 marketing.<br /><br />Liaised with Product Group Managers for future development.<br /><br />Presented
                 at many User Conferences, Marketing and Customer Events. <br /><br />Developed public training courses
@@ -611,9 +613,9 @@
                 </svg>
                 <i class="bi bi-easel"></i>
               </div>
-              <a href="#" class="stretched-link">
-                <h3>UK Government Ministry</h3>
-              </a>
+              <!-- <a href="#" class="stretched-link"> -->
+              <h3>UK Government Ministry</h3>
+              <!-- </a> -->
               <p>Developed a fully digital monthly reporting pack replacing a three-day process. <br /><br />Designed
                 analytics strategy in line with ministerial policies. <br /><br />Evaluated newer on-premise and cloud
                 analytical applications with UK data laws. <br /><br />Implemented analytical security models, lifecycle
@@ -631,16 +633,15 @@
                 </svg>
                 <i class="bi bi-lungs"></i>
               </div>
-              <a href="#" class="stretched-link">
-                <h3>Multinational healthcare company</h3>
-              </a>
+              <!-- <a href="#" class="stretched-link"> -->
+              <h3>Multinational healthcare company</h3>
+              <!-- </a> -->
               <p>Developed the BICC team with technical and analytical skills to manage the BI Platform.
                 <br /><br />Performed large scale migrations and upgrades, working closely with SAP Product Managers.
                 <br /><br />Ensure all authorisation, authentication and lifecycle management processes adhered to
                 strict compliance rules. <br /><br />The single global analytics platform was used by 86k users and over
                 270 different projects.
               </p>
-              <a href="#" class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -654,15 +655,14 @@
                 </svg>
                 <i class="bi bi-rocket-takeoff"></i>
               </div>
-              <a href="#" class="stretched-link">
-                <h3>Multinational aerospace and defence company</h3>
-              </a>
+              <!-- <a href="#" class="stretched-link"> -->
+              <h3>Multinational aerospace and defence company</h3>
+              <!-- </a> -->
               <p>Created and deployed authentication and security models in line with corporate policies.
                 <br /><br />Coordinated the platform and infrastructure capabilities for an Executive KPI Dashboard
                 being developed, in conjunction with other suppliers. <br /><br />Developed and provided training to key
                 personnel ensuring continued success of the project.
               </p>
-              <a href="#" class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -676,14 +676,13 @@
                 </svg>
                 <i class="bi bi-clipboard2-check"></i>
               </div>
-              <a href="#" class="stretched-link">
-                <h3>Other notable achievements </h3>
-              </a>
+              <!-- <a href="#" class="stretched-link"> -->
+              <h3>Other notable achievements </h3>
+              <!-- </a> -->
               <p>Developed and reviewed multiple certification examinations. <br /><br />Became the first partner member
                 of SAP Design Council for Analytics. <br /><br />Worked with many projects investigating and
                 implementing performance issues. <br /><br />Designed and developed end-to-end solutions, including data
                 sources, transformation, data modelling, architecture, security, development and deployment. </p>
-              <a href="#" class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
 
