--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Tim Nightingale - Resume</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Tim Nightingale Resume" name="description">
+  <meta content="analytics architect" name="keywords">
 
   <!-- Favicons -->
   <!-- <link href="assets/img/favicon.png" rel="icon"> -->
