--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <section id="hero" class="hero section light-background">
 
       <!-- <img src="assets/img/hero-bg.jpg" alt=""> -->
-      <img src="assets/img/tim2.png" alt="">
+      <img src="assets/img/tim-cover.png" alt="">
 
       <div class="container" data-aos="zoom-out">
         <div class="row justify-content-center">
@@ -103,7 +103,7 @@
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
             <!-- <img src="assets/img/profile-img.jpg" class="img-fluid" alt=""> -->
-            <img src="assets/img/tim3.png" class="img-fluid" alt="">
+            <img src="assets/img/tim-profile.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>Analytics Architect &amp; Innovator.</h2>
