--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             <div class="resume-item">
               <h4>BI Principal Consultant</h4>
               <h5>Sep 2015 – Oct 2022</h5>
-              <p><em>Mindtree UK</em></p>
+              <p><em>Mindtree UK (Bluefin Solutions)</em></p>
               <ul>
                 <li>Assisted customers in deploying new applications, including SAP Analytics Cloud, into their existing
                   landscape and BI strategy roadmaps.</li>
