--- a/index.html
+++ b/index.html
@@ -480,6 +480,15 @@
               </div>
             </div><!-- End Portfolio Item -->
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-data">
+              <img src="assets/img/portfolio/NodeRed-logo.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4 class="name">Node-Red</h4>
+                <p>Data processing</p>
+                <!--                <a href="assets/img/masonry-portfolio/masonry-portfolio-7.jpg" title="App 3" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>-->
+                <!--                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>-->
+              </div>
+            </div><!-- End Portfolio Item -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-other">
               <img src="assets/img/portfolio/OBS-logo.png" class="img-fluid" alt="">
               <div class="portfolio-info">
