updated headshot and alt text

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <section id="hero" class="hero section light-background">
 
       <!-- <img src="assets/img/hero-bg.jpg" alt=""> -->
-      <img src="assets/img/tim-cover.png" alt="">
+      <img src="assets/img/tim-cover.png" alt="Tim Nightingale from above">
 
       <div class="container" data-aos="zoom-out">
         <div class="row justify-content-center">
@@ -103,7 +103,7 @@
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
             <!-- <img src="assets/img/profile-img.jpg" class="img-fluid" alt=""> -->
-            <img src="assets/img/tim-profile.png" class="img-fluid" alt="">
+            <img src="assets/img/Tim-Headshot.jpg" class="img-fluid" alt="Heaadshot of Tim Nightingale">
           </div>
           <div class="col-lg-8 content">
             <h2>Analytics Architect &amp; Innovator.</h2>
@@ -341,7 +341,7 @@
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-other">
-              <img src="assets/img/portfolio/Alexa-logo.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Alexa-logo.png" class="img-fluid" alt="Amazon Alexa logo">
               <div class="portfolio-info">
                 <h4 class="name">Amazon Alexa</h4>
                 <p>Digital voice assistant</p>
@@ -351,7 +351,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-other">
-              <img src="assets/img/portfolio/AWS-logo.png" class="img-fluid" alt="Apache Kafka logo">
+              <img src="assets/img/portfolio/AWS-logo.png" class="img-fluid" alt="Amazon Web Services logo">
               <div class="portfolio-info">
                 <h4 class="name">Amazon Web Services</h4>
                 <p></p>
@@ -361,7 +361,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-data filter-other">
-              <img src="assets/img/portfolio/Arduino-logo.png" class="img-fluid" alt="Apache Kafka logo">
+              <img src="assets/img/portfolio/Arduino-logo.png" class="img-fluid" alt="Arduino logo">
               <div class="portfolio-info">
                 <h4 class="name">Arduino</h4>
                 <p>Microcontroller development</p>
@@ -371,7 +371,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-data filter-other">
-              <img src="assets/img/portfolio/Confluent-logo2.png" class="img-fluid" alt="Apache Kafka logo">
+              <img src="assets/img/portfolio/Confluent-logo2.png" class="img-fluid" alt="Confluent logo">
               <div class="portfolio-info">
                 <h4 class="name">Confluent | Apache Kafka</h4>
                 <p>Data streaming</p>
@@ -381,7 +381,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-other">
-              <img src="assets/img/portfolio/Docker-logo.png" class="img-fluid" alt="Apache Kafka logo">
+              <img src="assets/img/portfolio/Docker-logo.png" class="img-fluid" alt="Docker logo">
               <div class="portfolio-info">
                 <h4 class="name">Docker</h4>
                 <p>Application container management</p>
@@ -391,7 +391,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-other">
-              <img src="assets/img/portfolio/GoogleCloud-logo.png" class="img-fluid" alt="Apache Kafka logo">
+              <img src="assets/img/portfolio/GoogleCloud-logo.png" class="img-fluid" alt="Google Cloud logo">
               <div class="portfolio-info">
                 <h4 class="name">Google Cloud Platform</h4>
                 <p></p>
@@ -401,7 +401,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-analytics">
-              <img src="assets/img/portfolio/Grafana-logo.png" class="img-fluid" alt="Apache Kafka logo">
+              <img src="assets/img/portfolio/Grafana-logo.png" class="img-fluid" alt="Grafana logo">
               <div class="portfolio-info">
                 <h4 class="name">Grafana</h4>
                 <p>Dashboards</p>
@@ -411,7 +411,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-other">
-              <img src="assets/img/portfolio/Azure-logo.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Azure-logo.png" class="img-fluid" alt="Microsoft Azure logo">
               <div class="portfolio-info">
                 <h4 class="name">Microsoft Azure</h4>
                 <p></p>
@@ -421,7 +421,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-analytics filter-other">
-              <img src="assets/img/portfolio/Office-logo.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Office-logo.png" class="img-fluid" alt="Microsoft Office logo">
               <div class="portfolio-info">
                 <h4 class="name">Microsoft Office</h4>
                 <p>Analysis, documention &amp; presentation</p>
@@ -431,7 +431,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-data">
-              <img src="assets/img/portfolio/SQLServer-logo.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/SQLServer-logo.png" class="img-fluid" alt="SQLServer logo">
               <div class="portfolio-info">
                 <h4 class="name">Microsoft SQLServer</h4>
                 <p>Data modelling &amp; transformation</p>
@@ -441,7 +441,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-data">
-              <img src="assets/img/portfolio/MongoDB-logo.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/MongoDB-logo.png" class="img-fluid" alt="MongoDB logo">
               <div class="portfolio-info">
                 <h4 class="name">Mongo DB</h4>
                 <p>NoSQL database integration</p>
@@ -451,7 +451,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-data filter-other">
-              <img src="assets/img/portfolio/MQTT-logo.png" class="img-fluid" alt="Apache Kafka logo">
+              <img src="assets/img/portfolio/MQTT-logo.png" class="img-fluid" alt="MQTT logo">
               <div class="portfolio-info">
                 <h4 class="name">MQTT</h4>
                 <p>Data processing &amp; messaging</p>
@@ -461,7 +461,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-data">
-              <img src="assets/img/portfolio/MySQL-logo.png" class="img-fluid" alt="Apache Kafka logo">
+              <img src="assets/img/portfolio/MySQL-logo.png" class="img-fluid" alt="MySQL logo">
               <div class="portfolio-info">
                 <h4 class="name">MySQL</h4>
                 <p>Data modelling</p>
@@ -471,7 +471,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-other">
-              <img src="assets/img/portfolio/NodeJS-logo.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/NodeJS-logo.png" class="img-fluid" alt="NodeJS logo">
               <div class="portfolio-info">
                 <h4 class="name">NodeJS</h4>
                 <p>Backend Web development</p>
@@ -481,7 +481,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-data">
-              <img src="assets/img/portfolio/NodeRed-logo.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/NodeRed-logo.png" class="img-fluid" alt="Node-Red logo">
               <div class="portfolio-info">
                 <h4 class="name">Node-Red</h4>
                 <p>Data processing</p>
@@ -490,7 +490,7 @@
               </div>
             </div><!-- End Portfolio Item -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-other">
-              <img src="assets/img/portfolio/OBS-logo.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/OBS-logo.png" class="img-fluid" alt="Open Broadcaster Software logo">
               <div class="portfolio-info">
                 <h4 class="name">Open Broadcaster Software</h4>
                 <p>Video streaming control</p>
@@ -500,7 +500,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-data">
-              <img src="assets/img/portfolio/Oracle-logo2.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Oracle-logo2.png" class="img-fluid" alt="Oracle logo">
               <div class="portfolio-info">
                 <h4 class="name">Oracle</h4>
                 <p>Data modelling &amp; security</p>
@@ -510,7 +510,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-other">
-              <img src="assets/img/portfolio/React-logo.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/React-logo.png" class="img-fluid" alt="React logo">
               <div class="portfolio-info">
                 <h4 class="name">React</h4>
                 <p>Frontend Web UI development</p>
@@ -530,7 +530,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-analytics">
-              <img src="assets/img/portfolio/Tableau-logo.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Tableau-logo.png" class="img-fluid" alt="Tableau logo">
               <div class="portfolio-info">
                 <h4 class="name">Tableau</h4>
                 <p></p>
@@ -540,9 +540,10 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-data filter-other">
-              <img src="assets/img/portfolio/TheThingsNetwork-logo-RGB.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/TheThingsNetwork-logo-RGB.png" class="img-fluid"
+                alt="The Things Network logo">
               <div class="portfolio-info">
-                <h4 class="name">The Things Stack</h4>
+                <h4 class="name">The Things Network</h4>
                 <p>LoRaWAN (IoT) networking</p>
                 <!--                <a href="assets/img/portfolio/TheThingsNetwork-logo-RGB.png" title="The Things Network" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>-->
                 <!--                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>-->
