--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             <div class="resume-item">
               <h4>Analytics Architect</h4>
               <h5>2023 - Present</h5>
-              <p><em>Kern Analytics Ltd</em></p>
+              <p><em>Kern Analytics</em></p>
               <ul>
                 <li>Developing solutions with newer technologies and business models, including LoRaWAN, ecommerce and
                   transport logistics, microcontroller design and IoT, MQTT, web application development, document
@@ -299,15 +299,32 @@
                 <li>Stafford, United Kingdom</li>
                 <li>1timnightingale@gmail.com</li>
               </ul>
+              <p></p>
+              <h4>Early Career</h4>
+              <p><em>Hospitality & licensed trade industry</em></p>
+              <p><em>Working in all levels of the industry I managed high turnover and profitable premises, winning
+                  three national
+                  promotions. Understanding the importance of analytics, I transferred into a Head Office role looking
+                  after 22 premises.</em></p>
+              <p></p>
+              <h4>Hobbies &amp; Interests</h4>
+              <p><em>In addition, I am always up for learning something new including; PCB design and fabrication, IoT
+                  solutions (sensors,
+                  communication & data analysis), lock picking, solving puzzles, graphic design, laser engraving and
+                  cutting, business
+                  management and ecommerce, LED lighting and electronics, cooking, arts and crafts, cyber security.
+                </em></p>
             </div><!-- Edn Resume Item -->
 
             <h3 class="resume-title">Education</h3>
+
             <div class="resume-item">
               <h4>High school &amp; college education</h4>
               <h5>1981 - 1988</h5>
               <p><em>Wolverhampton, United Kingdom</em></p>
               <p></p>
             </div><!-- Edn Resume Item -->
+
           </div>
 
         </div>
