--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
             <!-- <img src="assets/img/profile-img.jpg" class="img-fluid" alt=""> -->
-            <img src="assets/img/Tim-Headshot.jpg" class="img-fluid" alt="Heaadshot of Tim Nightingale">
+            <img src="assets/img/Tim-Headshot2.jpg" class="img-fluid" alt="Heaadshot of Tim Nightingale">
           </div>
           <div class="col-lg-8 content">
             <h2>Analytics Architect &amp; Innovator.</h2>
