--- a/index.html
+++ b/index.html
@@ -125,18 +125,21 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Date of Birth:</strong> <span>6th May 1970</span></li>
+                  <li><i class="bi bi-three-dots-vertical"></i> <strong>Date of Birth:</strong> <span>6th May
+                      1970</span></li>
                   <!--                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>-->
                   <!--                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>-->
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Stafford, United Kingdom</span>
+                  <li><i class="bi bi-three-dots-vertical"></i> <strong>City:</strong> <span>Stafford, United
+                      Kingdom</span>
                   </li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>54</span></li>
+                  <li><i class="bi bi-three-dots-vertical"></i> <strong>Age:</strong> <span>54</span></li>
                   <!--                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>-->
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>1timnightingale@gmail.com</span>
+                  <li><i class="bi bi-three-dots-vertical"></i> <strong>Email:</strong>
+                    <span>1timnightingale@gmail.com</span>
                   </li>
                   <!--                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>-->
                 </ul>
@@ -309,13 +312,15 @@
                 <li>1timnightingale@gmail.com</li>
               </ul>
               <p></p>
+              <br />
               <h4>Early Career</h4>
-              <p><em>Hospitality & licensed trade industry</em></p>
+              <p><em>Hospitality & licensed trade industry (10 years)</em></p>
               <p><em>Working in all levels of the industry I managed high turnover and profitable premises, winning
                   three national
                   promotions. Understanding the importance of analytics, I transferred into a Head Office role looking
                   after 22 premises.</em></p>
               <p></p>
+              <br />
               <h4>Hobbies &amp; Interests</h4>
               <p><em>In addition, I am always up for learning something new including; PCB design and fabrication, IoT
                   solutions (sensors,
@@ -324,7 +329,7 @@
                   management and ecommerce, LED lighting and electronics, cooking, arts and crafts, cyber security.
                 </em></p>
             </div><!-- Edn Resume Item -->
-
+            <br />
             <h3 class="resume-title">Education</h3>
 
             <div class="resume-item">
@@ -397,9 +402,9 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-data filter-other">
-              <img src="assets/img/portfolio/Confluent-logo-p.png" class="img-fluid" alt="Confluent logo">
+              <img src="assets/img/portfolio/Kafka-logo-p.png" class="img-fluid" alt="Confluent logo">
               <div class="portfolio-info">
-                <h4 class="name">Confluent | Apache Kafka</h4>
+                <h4 class="name">Apache Kafka</h4>
                 <p>Data streaming</p>
                 <!--                <a href="assets/img/portfolio/Kafka-logo2.png" title="Apache Kafka" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>-->
                 <!--                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>-->
@@ -511,6 +516,16 @@
               <div class="portfolio-info">
                 <h4 class="name">Node-Red</h4>
                 <p>Data processing</p>
+                <!--                <a href="assets/img/masonry-portfolio/masonry-portfolio-7.jpg" title="App 3" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>-->
+                <!--                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>-->
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-other">
+              <img src="assets/img/portfolio/Notion-logo-p.png" class="img-fluid" alt="Node-Red logo">
+              <div class="portfolio-info">
+                <h4 class="name">Notion</h4>
+                <p>Productivity &amp; note takiing</p>
                 <!--                <a href="assets/img/masonry-portfolio/masonry-portfolio-7.jpg" title="App 3" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>-->
                 <!--                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>-->
               </div>
@@ -628,9 +643,9 @@
                 </svg>
                 <i class="bi bi-globe"></i>
               </div>
-              <!-- <a href="#" class="stretched-link"> -->
+              <!-- <a href="migration-details.html" class="stretched-link"> -->
               <h3>SAP/Business Objects - Global Migration Team</h3>
-              <!-- </a> -->
+              </a>
               <p>Worked in all elements of migration activities, including product development, training, and
                 marketing.<br /><br />Liaised with Product Group Managers for future development.<br /><br />Presented
                 at many User Conferences, Marketing and Customer Events. <br /><br />Developed public training courses
