--- a/government-details.html
+++ b/government-details.html
@@ -104,7 +104,7 @@
           <div class="swiper-wrapper align-items-center">
 
             <div class="swiper-slide">
-              <img src="assets/img/portfolio/JasonGoodmanUnsplashImage.jpg" alt="">
+              <img src="assets/img/portfolio/AnalyticElectronicGreyPhoto.jpg" alt="">
             </div>
 
             <!--
@@ -127,20 +127,19 @@
 
           <div class="col-lg-8" data-aos="fade-up">
             <div class="portfolio-description">
-              <h2>SAP/Business Objects - Global Migration Team</h2>
+              <h2>UK Government Ministry</h2>
               <p>
-                In my understanding of the upcoming release while on secondment with Business Objects product
-                management, I mentioned
-                that the upgrade tool they were hoping for would be easier than the complexity of moving from the
-                old
-                platform to the
-                newer one.
+                For each of its directorates, every UK government ministry creates a report pack every month. These were
+                created by
+                combining Excel and manual report analysis, after which the content was copied and pasted into
+                PowerPoint for
+                distribution. While some recipients would have the results printed for them, others would view them on a
+                laptop.
               </p>
               <p>
-                As a result, I created protocols, resources, best practices, and instructional materials to help
-                guarantee that clients
-                could migrate successfully. I was one of two technical leads on a multinational team that was
-                established.
+                It would take roughly two days to produce each pack, allowing for the inclusion of pertinent commentary
+                and meeting the
+                strict month-end closure deadlines.
               </p>
               <!--
               <div class="testimonial-item">
@@ -158,27 +157,39 @@
               </div>
 -->
               <p>
-                I travelled throughout North America, Europe, and Asia training consultants in best practices, and I
-                gave
-                presentations at
-                numerous user and partner conferences. Additionally, it assisted in updating the questions for the
-                SAP
-                certification
-                test.
+                The Ministry's SAP ERP systems would serve as the primary source of the necessary data.
               </p>
 
               <p>
-                Regardless of who was performing the migration, Key Account customers would naturally receive extra
-                attention from me as
-                I verified their plans and activities.
+                I used Web Intelligence (a component of SAP BusinessObjects Enterprise) to come up with a solution that
+                would reuse the
+                rules that were already hidden in the Excel workbooks to generate the report content automatically.
+                Additionally, the
+                necessary commentary was typed straight into the report, and the finished product was exported to PDF
+                format for
+                sharing.
               </p>
 
               <p>
-                I moved to the UK consulting team after the team was disbanded following the successful migrations
-                and
-                upgrades of
-                multiple releases.
+                Each report pack would then be updated, examined, verified, and finished in a few hours, not including
+                waiting for the
+                commentary.
               </p>
+
+              <p>
+                Naturally, a great deal of time was saved, and the recipients were not aware of the modifications. This
+                began the
+                strategic shift to improve the Ministry's capacity and response time to all requests by combining data
+                modelling with
+                reporting and analysis.
+              </p>
+
+              <p>
+                In subsequent work, I assisted with the analytics strategy, which included using cloud SaaS apps and
+                adhering to data
+                governance and sovereignty regulations set forth by the UK government.
+              </p>
+
             </div>
           </div>
 
@@ -186,11 +197,11 @@
             <div class="portfolio-info">
               <h3>Information</h3>
               <ul>
-                <li><strong>Category</strong> Architect</li>
-                <li><strong>Client</strong> SAP Key Accounts</li>
-                <li><strong>Region</strong> North America, EMEA & Asia</li>
-                <li><strong>Other</strong> User & Partner Conferences <br />
-                  SAP Education & Certification</li>
+                <li><strong>Category</strong> Solution Architect</li>
+                <li><strong>Client</strong> UK Government Ministry</li>
+                <li><strong>Solution</strong> Ministerial report packs</li>
+                <li><strong>Other</strong> Analytics strategy <br />
+                  Application integration</li>
               </ul>
             </div>
           </div>
