--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
                 </svg>
                 <i class="bi bi-megaphone"></i>
               </div>
-              <!--              <a href="#" class="stretched-link">-->
+              <!--              <a href="plant-details.html" class="stretched-link">-->
               <h3>Plant equipment manufacturer</h3>
               <!--              </a>-->
               <p>Developed a fully digital monthly reporting pack replacing a three-day process.
@@ -664,7 +664,7 @@
                 </svg>
                 <i class="bi bi-easel"></i>
               </div>
-              <!-- <a href="#" class="stretched-link"> -->
+              <!-- <a href="government-details.html" class="stretched-link"> -->
               <h3>UK Government Ministry</h3>
               <!-- </a> -->
               <p>Developed a fully digital monthly reporting pack replacing a three-day process. <br /><br />Designed
