--- a/plant-details.html
+++ b/plant-details.html
@@ -104,14 +104,14 @@
           <div class="swiper-wrapper align-items-center">
 
             <div class="swiper-slide">
-              <img src="assets/img/portfolio/AnalyticElectronicGreyPhoto.jpg" alt="">
+              <img src="assets/img/portfolio/JCB250000MachinesTelematicsLive.jpg" alt="">
+            </div>
+
+            <div class="swiper-slide">
+              <img src="assets/img/portfolio/JCBPowerwall.jpg" alt="">
             </div>
 
             <!--
-            <div class="swiper-slide">
-              <img src="assets/img/portfolio/MigrationPhotobyBrookeCagle.jpg" alt="">
-            </div>
-
             <div class="swiper-slide">
               <img src="assets/img/portfolio/CampaignCreatorsUnsplash.jpg" alt="">
             </div>
@@ -127,19 +127,16 @@
 
           <div class="col-lg-8" data-aos="fade-up">
             <div class="portfolio-description">
-              <h2>UK Government Ministry</h2>
+              <h2>Plant equipment manufacturer</h2>
               <p>
-                For each of its directorates, every UK government ministry creates a report pack every month. These were
-                created by
-                combining Excel and manual report analysis, after which the content was copied and pasted into
-                PowerPoint for
-                distribution. While some recipients would have the results printed for them, others would view them on a
-                laptop.
+                A global manufacturer based in the UK already had an established analytics team. I was bought in to see
+                how we could
+                push their use of data and analytics further, a directive from the Group Chief Information Officer.
               </p>
               <p>
-                It would take roughly two days to produce each pack, allowing for the inclusion of pertinent commentary
-                and meeting the
-                strict month-end closure deadlines.
+                The first solution was a touch-based interactive dashboard that would allow management to interrogate
+                the main service
+                KPIs while VIPs were visiting.
               </p>
               <!--
               <div class="testimonial-item">
@@ -157,37 +154,15 @@
               </div>
 -->
               <p>
-                The Ministry's SAP ERP systems would serve as the primary source of the necessary data.
+                Presented on an 80-inch 4K screen, the success led to each director having their own dashboards based on
+                the same
+                principal (faceted filtering instead of hierarchical drilling).
               </p>
 
               <p>
-                I used Web Intelligence (a component of SAP BusinessObjects Enterprise) to come up with a solution that
-                would reuse the
-                rules that were already hidden in the Excel workbooks to generate the report content automatically.
-                Additionally, the
-                necessary commentary was typed straight into the report, and the finished product was exported to PDF
-                format for
-                sharing.
-              </p>
-
-              <p>
-                Each report pack would then be updated, examined, verified, and finished in a few hours, not including
-                waiting for the
-                commentary.
-              </p>
-
-              <p>
-                Naturally, a great deal of time was saved, and the recipients were not aware of the modifications. This
-                began the
-                strategic shift to improve the Ministry's capacity and response time to all requests by combining data
-                modelling with
-                reporting and analysis.
-              </p>
-
-              <p>
-                In subsequent work, I assisted with the analytics strategy, which included using cloud SaaS apps and
-                adhering to data
-                governance and sovereignty regulations set forth by the UK government.
+                Another success was to help integrate a digital voice assistant (Alexa) with a SAP dashboard that was
+                displayed on an 80
+                sqm. 4K screen.
               </p>
 
             </div>
@@ -197,11 +172,11 @@
             <div class="portfolio-info">
               <h3>Information</h3>
               <ul>
-                <li><strong>Category</strong> Solution Architect <br /> Trusted Advisor</li>
-                <li><strong>Client</strong> UK Government Ministry</li>
-                <li><strong>Solution</strong> Ministerial report packs</li>
-                <li><strong>Other</strong> Analytics strategy <br />
-                  Application integration</li>
+                <li><strong>Category</strong> Solution Architect</li>
+                <li><strong>Client</strong> Global manufacturer</li>
+                <li><strong>Solution</strong> Interactive management dashboards</li>
+                <li><strong>Other</strong> Application integration <br />
+                  Innovation</li>
               </ul>
             </div>
           </div>
