--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
                 </svg>
                 <i class="bi bi-lungs"></i>
               </div>
-              <!-- <a href="#" class="stretched-link"> -->
+              <!-- <a href="healthcare-details.html" class="stretched-link"> -->
               <h3>Multinational healthcare company</h3>
               <!-- </a> -->
               <p>Developed the BICC team with technical and analytical skills to manage the BI Platform.
