--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i><span>Home</span></a></li>
         <li><a href="#about"><i class="bi bi-person navicon"></i><span>About</span></a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i><span>Resume</span></a></li>
-        <li><a href="#technology"><i class="bi bi-window-stack navicon"></i><span>Technology</span></a></li>
         <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i><span>Career Highlights</span></a></li>
+        <li><a href="#technology"><i class="bi bi-window-stack navicon"></i><span>Technology</span></a></li>
       </ul>
     </nav>
 
@@ -370,9 +370,9 @@
                 </svg>
                 <i class="bi bi-megaphone"></i>
               </div>
-              <!--              <a href="plant-details.html" class="stretched-link">-->
-              <h3>Plant equipment manufacturer</h3>
-              <!--              </a>-->
+              <a href="plant-details.html" class="stretched-link">
+                <h3>Plant equipment manufacturer</h3>
+              </a>
               <p>Developed a fully digital monthly reporting pack replacing a three-day process.
                 Designed analytics strategy in line with ministerial policies. <br /><br />Evaluated newer on-premise
                 and cloud analytical applications with UK data laws. <br /><br />Implemented analytical security models,
@@ -391,8 +391,8 @@
                 </svg>
                 <i class="bi bi-globe"></i>
               </div>
-              <!-- <a href="migration-details.html" class="stretched-link"> -->
-              <h3>SAP/Business Objects - Global Migration Team</h3>
+              <a href="migration-details.html" class="stretched-link">
+                <h3>SAP/Business Objects - Global Migration Team</h3>
               </a>
               <p>Worked in all elements of migration activities, including product development, training, and
                 marketing.<br /><br />Liaised with Product Group Managers for future development.<br /><br />Presented
@@ -412,9 +412,9 @@
                 </svg>
                 <i class="bi bi-easel"></i>
               </div>
-              <!-- <a href="government-details.html" class="stretched-link"> -->
-              <h3>UK Government Ministry</h3>
-              <!-- </a> -->
+              <a href="government-details.html" class="stretched-link">
+                <h3>UK Government Ministry</h3>
+              </a>
               <p>Developed a fully digital monthly reporting pack replacing a three-day process. <br /><br />Designed
                 analytics strategy in line with ministerial policies. <br /><br />Evaluated newer on-premise and cloud
                 analytical applications with UK data laws. <br /><br />Implemented analytical security models, lifecycle
@@ -432,9 +432,9 @@
                 </svg>
                 <i class="bi bi-lungs"></i>
               </div>
-              <!-- <a href="healthcare-details.html" class="stretched-link"> -->
-              <h3>Multinational healthcare company</h3>
-              <!-- </a> -->
+              <a href="healthcare-details.html" class="stretched-link">
+                <h3>Multinational healthcare company</h3>
+              </a>
               <p>Developed the BICC team with technical and analytical skills to manage the BI Platform.
                 <br /><br />Performed large scale migrations and upgrades, working closely with SAP Product Managers.
                 <br /><br />Ensure all authorisation, authentication and lifecycle management processes adhered to
@@ -454,9 +454,9 @@
                 </svg>
                 <i class="bi bi-rocket-takeoff"></i>
               </div>
-              <!-- <a href="aerospace-details.html" class="stretched-link"> -->
-              <h3>Multinational aerospace and defence company</h3>
-              <!-- </a> -->
+              <a href="aerospace-details.html" class="stretched-link">
+                <h3>Multinational aerospace and defence company</h3>
+              </a>
               <p>Created and deployed authentication and security models in line with corporate policies.
                 <br /><br />Coordinated the platform and infrastructure capabilities for an Executive KPI Dashboard
                 being developed, in conjunction with other suppliers. <br /><br />Developed and provided training to key
