--- a/index.html
+++ b/index.html
@@ -330,14 +330,16 @@
                 </em></p>
             </div><!-- Edn Resume Item -->
             <br />
+            <!--
             <h3 class="resume-title">Education</h3>
-
             <div class="resume-item">
               <h4>High school &amp; college education</h4>
               <h5>1981 - 1988</h5>
               <p><em>Wolverhampton, United Kingdom</em></p>
               <p></p>
-            </div><!-- Edn Resume Item -->
+            </div>
+            -->
+            <!-- Edn Resume Item -->
 
           </div>
 
@@ -360,7 +362,7 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="80">
             <div class="service-item item-cyan position-relative">
               <div class="icon">
                 <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
